# blackbe

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/endstone_blackbe/: __init__.py  blackbe_api.py  blackbe_plugin.py  plugin.yml
