[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-blackbe"
version = "0.0.1"
dependencies = []
authors = [
    { name = "daoge_cmd", email = "3523206925@qq.com" }
]
description = "BlackBe plugin for endstone server"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "blackbe"]

[project.urls]
Homepage = "https://github.com/endstone-essentials/blackbe"

[project.entry-points."endstone"]
blackbe = "endstone_blackbe:BlackBePlugin"